2104-06-04  Jason Ryan <jasonwryan@gmail.com>
	
	* new elvi: nlab

2013-12-10  Ian Beckwith  <ianb@erislabs.net>

	* yandex: disabled test: redirects to captcha when used with LWP.
	* Fix make distcheck: remove last traces of codesearch and scitopia.

2013-12-09  Ian Beckwith  <ianb@erislabs.net>

	* deja: disable tests, google groups now requires javascript.
	* gmane: fix test.
	* codesearch: removed, service shut down.
	* scitopia: removed, service shut down.
	* scicom: down, status unknown, made note in NEWS.

2013-12-08  Ian Beckwith  <ianb@erislabs.net>

	* new elvi: gmane
	* openbsd -mail: use gmane (directly, not via gmane elvi)
	* fix tests: ads, pgdoc, pin, yacy

2013-10-27  Ian Beckwith  <ianb@erislabs.net>

	* surfraw.IN: w3_custom_search_google: don't give full path to surfraw.
	* pgdoc, wayback: fixed tests.

2013-10-20  Ian Beckwith  <ianb@erislabs.net>

	* new elvi: yacy: search using yacy p2p search.
	  -S searches ScienceNet, a yacy-based science search engine.
	* rae: fix url, remove -tipo option (no longer supported),
	  disable test as there is now gratuitous javascript.

2013-10-06  Ian Beckwith  <ianb@erislabs.net>

	* Replaced phpdoc with version posted back in
	  2011 by Jon Yamokoski <jon@jonyamo.net>
	  Thanks, and apologies for missing it!
	* S: add test.
	* Include debian packaging in upstream tarball.

2013-10-05  Ian Beckwith  <ianb@erislabs.net>

	* ask, cisco: fix elvi.
	* new elvi:
	  + oraclesearch - Replaces removed sunonesearch <sigh>.
	  + S - search using w3_custom_search.
	* google: -g for groups clashed with -g for graphical browser.
	  Invoke groups with -G, -gr, -groups or -search=groups.
	* mdn: site invokes google custom search via gratuitous
	  javascript, so switch to w3_custom_search.
	* alioth: changed test to SKIP:, works OK but won't talk
	  to LWP, hence test breaks.
	* discogs, openbsd: fixed tests.
	* mdn, mysqldoc, pgdoc, phpdoc: added tests.
	* w3_custom_search:
	  + document in README.