@@ -141,6 +141,9 @@ Manolo Martínez <manolo@austrohungaro.com>
 Jon Yamokoski <jon@jonyamo.net>
         elvi: phpdoc
 
+Lucas Hoffmann <l-m-h at web.de>
+        elvi: commandlinefu
+
 THANKS TO
 
 Brian Nelson           <bnelson@bloodclot.net>
