@@ -26,6 +26,7 @@ dist_elvi_SCRIPTS	= \
 		  cliki \
 		  cnn \
 		  comlaw \
+		  commandlinefu \
 		  ctan \
 		  currency \
 		  cve \
