@@ -21,6 +21,7 @@ elvi.1sr.gz @mandir@/man1/cia.1sr.gz
 elvi.1sr.gz @mandir@/man1/cliki.1sr.gz
 elvi.1sr.gz @mandir@/man1/cnn.1sr.gz
 elvi.1sr.gz @mandir@/man1/comlaw.1sr.gz
+elvi.1sr.gz @mandir@/man1/commandlinefu.1sr.gz
 elvi.1sr.gz @mandir@/man1/ctan.1sr.gz
 elvi.1sr.gz @mandir@/man1/currency.1sr.gz
 elvi.1sr.gz @mandir@/man1/cve.1sr.gz
