@@ -1,0 +1,10 @@
+commandlinefu
+is the place to record those command-line gems that you return to again and again
+commandlinefu find something
+Terminal - Commands matching find something - [\d,]+ results
+commandlinefu -txt test
+^# commandlinefu.com by David Winterbottom\n
+commandlinefu -json test
+^\[\{"id":"\d+","command":.*\}\]$
+commandlinefu -rss test
+</rss>
