@@ -1,3 +1,7 @@
+2014-09-20  Lucas Hoffmann <l-m-h at web.de>
+
+	* new elvi: commandlinefu
+
 2104-06-04  Jason Ryan <jasonwryan@gmail.com>
 	
 	* new elvi: nlab
